--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,27 +3,13 @@
         {
             "type": "cppbuild",
             "label": "g++ build",
-            "command": "/usr/bin/g++",
+            "command": "make",
             "args": [
-                "-g",
-                "${file}",
-                "-o",
-                "${fileDirname}/${fileBasenameNoExtension}",
-                "-l",
-                "readline",
-                "-std=c++17"
+                "-j6"
             ],
             "options": {
-                "cwd": ""
-            },
-            "problemMatcher": [
-                "$gcc"
-            ],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "detail": "Generated task by Debugger"
+                "cwd": "${fileDirname}"
+            }
         }
     ],
     "version": "2.0.0"
